# apz4

./: Cargo.toml  Dockerfile  Readme.md  docker-compose.yml  send_messages.sh
facade-service/: Cargo.toml
facade-service/src/: main.rs
kafka/: start-kafka.sh
logging-service/: Cargo.toml
logging-service/src/: main.rs
messages-service/: Cargo.toml
messages-service/src/: main.rs
path/redis_conf_folder/: redis-cluster-create.sh
