[package]
name = "messages-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.36.2", features = ["default"] }
rocket = { version = "0.5.0", features = ["json", "serde_json", "uuid"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.116"
